1. trigger translation build when enableTranslation is set to true    in system, gradle, or project properties. 2. wrap string resource after merge resources for translation build.
Change-Id: I23cb5771c314b08b50b1ce20bb1818985a753296